Add all the graph volumes

--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -27,7 +27,7 @@
 
 	<h2>Controls</h2>
 
-	<article class="w3-container w3-border w3-round w3-padding w3-margin">
+	<article class="w3-container w3-round w3-margin w3-border">
 
 		<p>
 			<b>Exploring</b>
@@ -73,19 +73,19 @@
 
 	<h2>Viz</h2>
 
-	<div class="w3-container w3-margin">
+	<article class="w3-container w3-margin">
 
-		<article class="w3-container w3-margin">
+		<div class="w3-container w3-margin">
 			<ul class="w3-ul w3-border w3-round">
 				<li>|V|: <span id="queue_V" class="w3-monospace">0</span></li>
 				<li>|E|: <span id="queue_E" class="w3-monospace">0</span></li>
 				<li>Nodes queue length: <span id="queue_length" class="w3-monospace">0</span></li>
 				<li>Edges queue length: <span id="edges_queue_length" class="w3-monospace">0</span></li>
 			</ul>
-		</article>
+		</div>
 
 		<div id="network" class="w3-card w3-border w3-round w3-margin" style="height: 1000px;"></div>
-	</div>
+	</article>
 
 	<script>
 
