--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -45,7 +45,7 @@
 			<label>Inborhood</label>
 
 			<button class="w3-button w3-blue w3-margin-left" onclick="popNodeAndExplore(); popEdgeAndVizualize();">Pop
-				node and explore</button>
+				netxt node and explore it</button>
 
 			<button class="w3-button w3-blue w3-margin-left" onclick="/*shuffle(queue);*/ shuffle(edges_queue);">Shuffle
 				edges queue</button>
