--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -45,7 +45,7 @@
 			<label>Inborhood</label>
 
 			<button class="w3-button w3-blue w3-margin-left" onclick="popNodeAndExplore(); popEdgeAndVizualize();">Pop
-				netxt node and explore it</button>
+				next node and explore it</button>
 
 			<button class="w3-button w3-blue w3-margin-left" onclick="/*shuffle(queue);*/ shuffle(edges_queue);">Shuffle
 				edges queue</button>
@@ -96,18 +96,11 @@
 	<script>
 
 		function shuffle(array) {
-			let currentIndex = array.length;
-
-			// While there remain elements to shuffle...
-			while (currentIndex != 0) {
-
-				// Pick a remaining element...
-				let randomIndex = Math.floor(Math.random() * currentIndex);
-				currentIndex--;
-
-				// And swap it with the current element.
-				[array[currentIndex], array[randomIndex]] = [
-					array[randomIndex], array[currentIndex]];
+			for (var i = array.length - 1; i > 0; i--) {
+				var j = Math.floor(Math.random() * (i + 1));
+				var temp = array[i];
+				array[i] = array[j];
+				array[j] = temp;
 			}
 		}
 
