Adding style for buttons

--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -44,10 +44,10 @@
 			<input id="explore_incoming" class="w3-check w3-margin-left" type="checkbox">
 			<label>Inborhood</label>
 
-			<button class="w3-button w3-blue w3-margin-left" onclick="popNodeAndExplore(); popEdgeAndVizualize();">Pop
+			<button class="w3-btn w3-round w3-border w3-margin-left" onclick="popNodeAndExplore(); popEdgeAndVizualize();">Pop
 				next node and explore it</button>
 
-			<button class="w3-button w3-blue w3-margin-left" onclick="/*shuffle(queue);*/ shuffle(edges_queue);">Shuffle
+			<button class="w3-btn w3-round w3-border w3-margin-left" onclick="/*shuffle(queue);*/ shuffle(edges_queue);">Shuffle
 				edges queue</button>
 		</p>
 
