--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -3,8 +3,7 @@
 
 <head>
 	<title>Webgraph interface</title>
-	<!-- <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>	 -->
-	<script type="text/javascript" src="vis-network.min.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
 	<script type="text/javascript" src="https://d3js.org/d3.v7.min.js"></script>
 	<link href="data:image/x-icon;base64,YourBase64StringHere" rel="icon" type="image/x-icon" />
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
